--- a/src/pretix/control/templates/pretixcontrol/event/tickets.html
+++ b/src/pretix/control/templates/pretixcontrol/event/tickets.html
@@ -15,10 +15,10 @@
                 </div>
             {% endif %}
             {% bootstrap_form_errors form %}
-            {% bootstrap_field form.ticket_download layout="horizontal" %}
-            {% bootstrap_field form.ticket_download_date layout="horizontal" %}
-            {% bootstrap_field form.ticket_download_addons layout="horizontal" %}
-            {% bootstrap_field form.ticket_download_nonadm layout="horizontal" %}
+            {% bootstrap_field form.ticket_download layout="control" %}
+            {% bootstrap_field form.ticket_download_date layout="control" %}
+            {% bootstrap_field form.ticket_download_addons layout="control" %}
+            {% bootstrap_field form.ticket_download_nonadm layout="control" %}
             {% for provider in providers %}
                 <div class="panel panel-default ticketoutput-panel">
                     <div class="panel-heading">
