--- a/src/pretix/control/templates/pretixcontrol/events/create_copy.html
+++ b/src/pretix/control/templates/pretixcontrol/events/create_copy.html
@@ -16,5 +16,5 @@
             {% endblocktrans %}
         </strong>
     </div>
-    {% bootstrap_field form.copy_from_event layout="horizontal" %}
+    {% bootstrap_field form.copy_from_event layout="control" %}
 {% endblock %}
