--- a/src/pretix/control/templates/pretixcontrol/event/mail.html
+++ b/src/pretix/control/templates/pretixcontrol/event/mail.html
@@ -8,9 +8,9 @@
         {% bootstrap_form_errors form %}
         <fieldset>
             <legend>{% trans "E-mail settings" %}</legend>
-            {% bootstrap_field form.mail_prefix layout="horizontal" %}
-            {% bootstrap_field form.mail_from layout="horizontal" %}
-            {% bootstrap_field form.mail_text_signature layout="horizontal" %}
+            {% bootstrap_field form.mail_prefix layout="control" %}
+            {% bootstrap_field form.mail_from layout="control" %}
+            {% bootstrap_field form.mail_text_signature layout="control" %}
         </fieldset>
         <fieldset>
             <legend>{% trans "E-mail content" %}</legend>
@@ -48,13 +48,13 @@
         </fieldset>
         <fieldset>
             <legend>{% trans "SMTP settings" %}</legend>
-            {% bootstrap_field form.smtp_use_custom layout="horizontal" %}
-            {% bootstrap_field form.smtp_host layout="horizontal" %}
-            {% bootstrap_field form.smtp_port layout="horizontal" %}
-            {% bootstrap_field form.smtp_username layout="horizontal" %}
-            {% bootstrap_field form.smtp_password layout="horizontal" %}
-            {% bootstrap_field form.smtp_use_tls layout="horizontal" %}
-            {% bootstrap_field form.smtp_use_ssl layout="horizontal" %}
+            {% bootstrap_field form.smtp_use_custom layout="control" %}
+            {% bootstrap_field form.smtp_host layout="control" %}
+            {% bootstrap_field form.smtp_port layout="control" %}
+            {% bootstrap_field form.smtp_username layout="control" %}
+            {% bootstrap_field form.smtp_password layout="control" %}
+            {% bootstrap_field form.smtp_use_tls layout="control" %}
+            {% bootstrap_field form.smtp_use_ssl layout="control" %}
         </fieldset>
         <div class="form-group submit-group">
             <button type="submit" class="btn btn-primary btn-save">
