--- a/src/pretix/control/templates/pretixcontrol/event/tax_edit.html
+++ b/src/pretix/control/templates/pretixcontrol/event/tax_edit.html
@@ -17,8 +17,8 @@
     <form action="" method="post" class="form-horizontal">
         {% csrf_token %}
         {% bootstrap_form_errors form %}
-        {% bootstrap_field form.name layout="horizontal" %}
-        {% bootstrap_field form.rate addon_after="%" layout="horizontal" %}
+        {% bootstrap_field form.name layout="control" %}
+        {% bootstrap_field form.rate addon_after="%" layout="control" %}
         <legend>{% trans "Advanced settings" %}</legend>
         <div class="alert alert-warning">
             <span class="fa fa-w fa-legal fa-4x pull-left"></span>
@@ -29,9 +29,9 @@
             {% endblocktrans %}
             <div class="clearfix"></div>
         </div>
-        {% bootstrap_field form.price_includes_tax layout="horizontal" %}
-        {% bootstrap_field form.eu_reverse_charge layout="horizontal" %}
-        {% bootstrap_field form.home_country layout="horizontal" %}
+        {% bootstrap_field form.price_includes_tax layout="control" %}
+        {% bootstrap_field form.eu_reverse_charge layout="control" %}
+        {% bootstrap_field form.home_country layout="control" %}
         <div class="form-group submit-group">
             <button type="submit" class="btn btn-primary btn-save">
                 {% trans "Save" %}
