--- a/src/pretix/control/templates/pretixcontrol/item/addons.html
+++ b/src/pretix/control/templates/pretixcontrol/item/addons.html
@@ -44,10 +44,10 @@
                         </div>
                         <div class="panel-body form-horizontal">
                             {% bootstrap_form_errors form %}
-                            {% bootstrap_field form.addon_category layout='horizontal' %}
-                            {% bootstrap_field form.min_count layout='horizontal' %}
-                            {% bootstrap_field form.max_count layout='horizontal' %}
-                            {% bootstrap_field form.price_included layout='horizontal' %}
+                            {% bootstrap_field form.addon_category layout="control" %}
+                            {% bootstrap_field form.min_count layout="control" %}
+                            {% bootstrap_field form.max_count layout="control" %}
+                            {% bootstrap_field form.price_included layout="control" %}
                         </div>
                     </div>
                 {% endfor %}
@@ -76,10 +76,10 @@
                             </div>
                         </div>
                         <div class="panel-body form-horizontal">
-                            {% bootstrap_field formset.empty_form.addon_category layout='horizontal' %}
-                            {% bootstrap_field formset.empty_form.min_count layout='horizontal' %}
-                            {% bootstrap_field formset.empty_form.max_count layout='horizontal' %}
-                            {% bootstrap_field formset.empty_form.price_included layout='horizontal' %}
+                            {% bootstrap_field formset.empty_form.addon_category layout="control" %}
+                            {% bootstrap_field formset.empty_form.min_count layout="control" %}
+                            {% bootstrap_field formset.empty_form.max_count layout="control" %}
+                            {% bootstrap_field formset.empty_form.price_included layout="control" %}
                         </div>
                     </div>
                 {% endescapescript %}
