--- a/src/pretix/control/templates/pretixcontrol/items/category.html
+++ b/src/pretix/control/templates/pretixcontrol/items/category.html
@@ -11,9 +11,9 @@
             <div class="col-xs-12{% if category %} col-lg-10{% endif %}">
                 <fieldset>
                     <legend>{% trans "General information" %}</legend>
-                    {% bootstrap_field form.name layout="horizontal" %}
-                    {% bootstrap_field form.description layout="horizontal" %}
-                    {% bootstrap_field form.is_addon layout="horizontal" %}
+                    {% bootstrap_field form.name layout="control" %}
+                    {% bootstrap_field form.description layout="control" %}
+                    {% bootstrap_field form.is_addon layout="control" %}
                 </fieldset>
             </div>
             {% if category %}
