--- a/src/pretix/control/templates/pretixcontrol/organizers/team_edit.html
+++ b/src/pretix/control/templates/pretixcontrol/organizers/team_edit.html
@@ -17,25 +17,25 @@
         {% bootstrap_form_errors form %}
         <fieldset>
             <legend>{% trans "General information" %}</legend>
-            {% bootstrap_field form.name layout="horizontal" %}
+            {% bootstrap_field form.name layout="control" %}
         </fieldset>
         <fieldset>
             <legend>{% trans "Organizer permissions" %}</legend>
-            {% bootstrap_field form.can_create_events layout="horizontal" %}
-            {% bootstrap_field form.can_change_teams layout="horizontal" %}
-            {% bootstrap_field form.can_change_organizer_settings layout="horizontal" %}
+            {% bootstrap_field form.can_create_events layout="control" %}
+            {% bootstrap_field form.can_change_teams layout="control" %}
+            {% bootstrap_field form.can_change_organizer_settings layout="control" %}
         </fieldset>
         <fieldset>
             <legend>{% trans "Event permissions" %}</legend>
 
-            {% bootstrap_field form.all_events layout="horizontal" %}
-            {% bootstrap_field form.limit_events layout="horizontal" %}
-            {% bootstrap_field form.can_change_event_settings layout="horizontal" %}
-            {% bootstrap_field form.can_change_items layout="horizontal" %}
-            {% bootstrap_field form.can_view_orders layout="horizontal" %}
-            {% bootstrap_field form.can_change_orders layout="horizontal" %}
-            {% bootstrap_field form.can_view_vouchers layout="horizontal" %}
-            {% bootstrap_field form.can_change_vouchers layout="horizontal" %}
+            {% bootstrap_field form.all_events layout="control" %}
+            {% bootstrap_field form.limit_events layout="control" %}
+            {% bootstrap_field form.can_change_event_settings layout="control" %}
+            {% bootstrap_field form.can_change_items layout="control" %}
+            {% bootstrap_field form.can_view_orders layout="control" %}
+            {% bootstrap_field form.can_change_orders layout="control" %}
+            {% bootstrap_field form.can_view_vouchers layout="control" %}
+            {% bootstrap_field form.can_change_vouchers layout="control" %}
         </fieldset>
         <div class="form-group submit-group">
             <button type="submit" class="btn btn-primary btn-save">
