--- a/src/pretix/control/templates/pretixcontrol/vouchers/bulk.html
+++ b/src/pretix/control/templates/pretixcontrol/vouchers/bulk.html
@@ -32,15 +32,15 @@
                     </div>
                 </div>
             </div>
-            {% bootstrap_field form.codes layout="horizontal" %}
+            {% bootstrap_field form.codes layout="control" %}
 
-            {% bootstrap_field form.max_usages layout="horizontal" %}
+            {% bootstrap_field form.max_usages layout="control" %}
         </fieldset>
         <fieldset>
             <legend>{% trans "Voucher details" %}</legend>
-            {% bootstrap_field form.valid_until layout="horizontal" horizontal_field_class="col-md-9 splitdatetimerow" %}
-            {% bootstrap_field form.block_quota layout="horizontal" %}
-            {% bootstrap_field form.allow_ignore_quota layout="horizontal" %}
+            {% bootstrap_field form.valid_until layout="control" horizontal_field_class="col-md-9 splitdatetimerow" %}
+            {% bootstrap_field form.block_quota layout="control" %}
+            {% bootstrap_field form.allow_ignore_quota layout="control" %}
             <div class="form-group">
                 <label class="col-md-3 control-label" for="id_tag">{% trans "Price effect" %}</label>
                 <div class="col-md-5">
@@ -50,7 +50,7 @@
                     {% bootstrap_field form.value show_label=False form_group_class="" %}
                 </div>
             </div>
-            {% bootstrap_field form.itemvar layout="horizontal" %}
+            {% bootstrap_field form.itemvar layout="control" %}
             <div class="form-group">
                 <div class="col-md-9 col-md-offset-3">
                     <div class="controls">
@@ -64,8 +64,8 @@
                     </div>
                 </div>
             </div>
-            {% bootstrap_field form.tag layout="horizontal" %}
-            {% bootstrap_field form.comment layout="horizontal" %}
+            {% bootstrap_field form.tag layout="control" %}
+            {% bootstrap_field form.comment layout="control" %}
         </fieldset>
         {% eventsignal request.event "pretix.control.signals.voucher_form_html" form=form %}
         <div class="form-group submit-group">
