--- a/src/pretix/control/templates/pretixcontrol/user/settings.html
+++ b/src/pretix/control/templates/pretixcontrol/user/settings.html
@@ -11,6 +11,7 @@
         <legend>{% trans "General settings" %}</legend>
         {% bootstrap_field form.fullname layout='horizontal' %}
         {% bootstrap_field form.locale layout='horizontal' %}
+        {% bootstrap_field form.timezone layout='horizontal' %}
     </fieldset>
     <fieldset>
         <legend>{% trans "Login settings" %}</legend>
