Use scrolling multiple choice widget in more places

--- a/src/pretix/static/pretixcontrol/scss/_forms.scss
+++ b/src/pretix/static/pretixcontrol/scss/_forms.scss
@@ -246,7 +246,7 @@ label .optional {
   font-weight: normal;
 }
 
-.scrolling-multiple-choice {
+div.scrolling-multiple-choice {
   height: 150px;
   border: 1px solid $input-border;
   border-radius: $input-border-radius;
