--- a/src/pretix/control/templates/pretixcontrol/items/questions.html
+++ b/src/pretix/control/templates/pretixcontrol/items/questions.html
@@ -26,11 +26,12 @@
             </a>
         </p>
         <div class="table-responsive">
-            <table class="table table-hover">
+            <table class="table table-hover table-quotas">
                 <thead>
                 <tr>
                     <th>{% trans "Question" %}</th>
                     <th>{% trans "Type" %}</th>
+                    <th>{% trans "Products" %}</th>
                     <th class="action-col-2"></th>
                     <th class="action-col-2"></th>
                 </tr>
@@ -42,6 +43,13 @@
                     {% url "control:event.items.questions.show" organizer=request.event.organizer.slug event=request.event.slug question=q.id %}">{{ q.question }}</a></strong>
                         </td>
                         <td>{{ q.get_type_display }}</td>
+                        <td>
+                            <ul>
+                                {% for item in q.items.all %}
+                                    <li><a href="{% url "control:event.item" organizer=request.event.organizer.slug event=request.event.slug item=item.id %}">{{ item.name }}</a></li>
+                                {% endfor %}
+                            </ul>
+                        </td>
                         <td>
                             <a href="{% url "control:event.items.questions.up" organizer=request.event.organizer.slug event=request.event.slug question=q.id %}" class="btn btn-default btn-sm {% if forloop.counter0 == 0 %}disabled{% endif %}"><i class="fa fa-arrow-up"></i></a>
                             <a href="{% url "control:event.items.questions.down" organizer=request.event.organizer.slug event=request.event.slug question=q.id %}" class="btn btn-default btn-sm {% if forloop.revcounter0 == 0 %}disabled{% endif %}"><i class="fa fa-arrow-down"></i></a>
