--- a/src/pretix/control/templates/pretixcontrol/subevents/index.html
+++ b/src/pretix/control/templates/pretixcontrol/subevents/index.html
@@ -52,9 +52,9 @@
                         <a href="?{% url_replace request 'ordering' 'date_from' %}"><i class="fa fa-caret-up"></i></a>
                     </th>
                     <th>
-                        {% trans "Quota available" %}
-                        <a href="?{% url_replace request 'ordering' '-sum_quota_available' %}"><i class="fa fa-caret-down"></i></a>
-                        <a href="?{% url_replace request 'ordering' 'sum_quota_available' %}"><i class="fa fa-caret-up"></i></a>
+                        {% trans "Paid tickets per quota" %}
+                        <a href="?{% url_replace request 'ordering' '-sum_tickets_paid' %}"><i class="fa fa-caret-down"></i></a>
+                        <a href="?{% url_replace request 'ordering' 'sum_tickets_paid' %}"><i class="fa fa-caret-up"></i></a>
                     </th>
                     <th>
                         {% trans "Status" %}
@@ -74,7 +74,7 @@
                         <td>{{ s.get_date_from_display }}</td>
                         <td>
                             {% for q in s.first_quotas|slice:":3" %}
-                                {% include "pretixcontrol/fragment_quota_box.html" with quota=q %}
+                                {% include "pretixcontrol/fragment_quota_box_paid.html" with quota=q %}
                             {% endfor %}
                             {% if s.first_quotas|length > 3 %}
                                 <a href="{% url "control:event.items.quotas" organizer=request.event.organizer.slug event=request.event.slug %}?subevent={{ s.id }}"
