--- a/src/pretix/control/templates/pretixcontrol/checkin/index.html
+++ b/src/pretix/control/templates/pretixcontrol/checkin/index.html
@@ -52,8 +52,7 @@
                 <table class="table table-condensed table-hover">
                     <thead>
                     <tr>
-                      <th>{% trans "CheckIn?" %}
-                      </th>
+                        <th />
                         <th>{% trans "Order code" %} <a href="?{% url_replace request 'ordering' '-code'%}"><i class="fa fa-caret-down"></i></a>
                       <a href="?{% url_replace request 'ordering' 'code'%}"><i class="fa fa-caret-up"></i></a></th>
                         <th>{% trans "Item" %} <a href="?{% url_replace request 'ordering' '-item'%}"><i class="fa fa-caret-down"></i></a>
@@ -79,7 +78,7 @@
                           <td> 
                             <input type="checkbox" name="checkin"
                                                    id="id_checkin" class=""
-                                                                   value="{{e.order.code}}"/>
+                                                                   value="{{e.pk}}"/>
                           </td>
                             <td>
                                 <strong><a href="{% url "control:event.order" event=request.event.slug organizer=request.event.organizer.slug code=e.order.code %}">{{ e.order.code }}</a></strong>
@@ -116,7 +115,7 @@
             </div>
             <div class="form-group submit-group">
               <button type="submit" class="btn btn-primary btn-save">
-                Check-In selected
+                {% trans "Check-In selected attendees" %}
               </button>
             </div>
         </form>
