Fix order retry issue

--- a/src/pretix/presale/templates/pretixpresale/event/order_pay.html
+++ b/src/pretix/presale/templates/pretixpresale/event/order_pay.html
@@ -11,6 +11,7 @@
 
     <form method="post" class="form-horizontal" href="" data-total="{{ order.total|floatformat:2 }}">
         {% csrf_token %}
+        <input type="hidden" name="payment" value="{{ provider.identifier }}">
         <div class="form-horizontal payment-redo-form">
             {{ form }}
         </div>
