--- a/src/pretix/static/pretixcontrol/scss/_flags.scss
+++ b/src/pretix/static/pretixcontrol/scss/_flags.scss
@@ -13,6 +13,7 @@ pre[lang] {
   margin-bottom: 20px;
 }
 
+pre[lang=da], input[lang=da], textarea[lang=da] { background-image: url(static('pretixbase/img/flags/dk.png')); }
 pre[lang=ad], input[lang=ad], textarea[lang=ad] { background-image: url(static('pretixbase/img/flags/ad.png')); }
 pre[lang=ae], input[lang=ae], textarea[lang=ae] { background-image: url(static('pretixbase/img/flags/ae.png')); }
 pre[lang=af], input[lang=af], textarea[lang=af] { background-image: url(static('pretixbase/img/flags/af.png')); }
