Add field internal_reference to invoice addresses

--- a/src/pretix/presale/templates/pretixpresale/event/checkout_confirm.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_confirm.html
@@ -90,6 +90,8 @@
                                     <dt>{% trans "VAT ID" %}</dt>
                                     <dd>{{ addr.vat_id }}</dd>
                                 {% endif %}
+                                <dt>{% trans "Internal reference" %}</dt>
+                                <dd>{{ addr.internal_reference }}</dd>
                             </dl>
                         </div>
                     </div>
