--- a/src/pretix/control/templates/pretixcontrol/order/index.html
+++ b/src/pretix/control/templates/pretixcontrol/order/index.html
@@ -393,6 +393,8 @@
                                             {% endif %}
                                         </dd>
                                     {% endif %}
+                                    <dt>{% trans "Internal reference" %}</dt>
+                                    <dd>{{ order.invoice_address.internal_reference }}</dd>
                                 </dl>
                             </div>
                         </div>
