--- a/src/pretix/static/pretixpresale/scss/widget.scss
+++ b/src/pretix/static/pretixpresale/scss/widget.scss
@@ -2,14 +2,7 @@
 @import "../../bootstrap/scss/bootstrap/variables";
 @import "../../bootstrap/scss/bootstrap/mixins";
 
-.pretix-widget {
-  margin: 10px 0;
-  padding: 0 10px;
-  border: 1px solid #ccc;
-  position: relative;
-  min-height: 208px;
-  border-radius: $input-border-radius;
-
+.pretix-widget, .pretix-widget-alert-box {
   a {
     color: $link-color;
     text-decoration: none;
@@ -90,6 +83,16 @@
       outline-offset: -2px;
     }
   }
+}
+
+.pretix-widget {
+  margin: 10px 0;
+  padding: 0 10px;
+  border: 1px solid #ccc;
+  position: relative;
+  min-height: 208px;
+  border-radius: $input-border-radius;
+
 
   .pretix-widget-clickable {
     cursor: pointer;
@@ -330,6 +333,75 @@
   }
 }
 
+@keyframes pretix-widget-bounce-in {
+  0% {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1.5);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+.pretix-widget-alert-holder {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(255, 255, 255, 0.8);
+  z-index: 16777271;
+  visibility: hidden;
+  opacity: 0;
+  transition: opacity 0.5s, visibility 0.5s;
+
+  &.pretix-widget-alert-shown {
+    visibility: visible;
+    opacity: 1;
+    transition: opacity 0.5s, visibility 0.5s;
+  }
+
+  .bounce-enter-active {
+    animation: pretix-widget-bounce-in .5s;
+  }
+  .bounce-leave-active {
+    animation: pretix-widget-bounce-in .5s reverse;
+  }
+
+  .pretix-widget-alert-box {
+    position: fixed;
+    left: 50%;
+    width: 600px;
+    margin-left: -300px;
+    top: 100px;
+    background: white;
+    border-radius: 5px 5px 5px 5px;
+    -moz-border-radius: 5px 5px 5px 5px;
+    -webkit-border-radius: 5px 5px 5px 5px;
+    box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.09);
+    -webkit-box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.09);
+    -moz-box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.1), 0 6px 20px 0 rgba(0, 0, 0, 0.09);
+    box-sizing: border-box;
+    padding: 42px 20px 20px 20px;
+    text-align: center;
+    font-size: 20px;
+
+    p:first-child {
+      margin-top: 0;
+    }
+    p:last-child {
+      margin-bottom: 0;
+    }
+  }
+  .pretix-widget-alert-icon {
+    position: fixed;
+    left: 50%;
+    width: 64px;
+    margin-left: -32px;
+    top: 68px;
+  }
+}
 .pretix-widget-frame-holder {
   position: fixed;
   left: 0;
